--- a/libft/Makefile
+++ b/libft/Makefile
@@ -8,7 +8,8 @@ ARFLAGS = rcs
 OBJDIR = objs
 SRCDIR = src
 
-SRC =	ft_bzero.c	\
+SRC =	ft_atoi.c	\
+		ft_bzero.c	\
 		ft_calloc.c	\
 		ft_isalnum.c \
 		ft_isalpha.c \
